# Skeltrack

./: .gitignore  AUTHORS  Makefile.am  README  autogen.sh  configure.ac  index.html  params.json
doc/: Makefile.am
doc/latest/: SkeltrackSkeleton.html  annotation-glossary.html  go01.html  index.html  index.sgml  ix01.html  ix02.html  license.html  skeltrack-overview.html  skeltrack-skeltrack-joint.html  skeltrack.devhelp2  skeltrackbase.html  skeltrackglossary.html  skeltrackobjecthierarchy.html  skeltrackobjectindex.html  skeltrackobjects.html
doc/reference/: Makefile.am  glossary.xml  skeltrack-docs.xml  skeltrack-overview.xml
examples/: Makefile.am  test-kinect.c
skeltrack/: Makefile.am  Skeltrack-0.1.gir  pqueue.c  pqueue.h  skeltrack-0.1.pc.in  skeltrack-joint.c  skeltrack-joint.h  skeltrack-skeleton.c  skeltrack-skeleton.h  skeltrack-util.c  skeltrack-util.h
tests/: Makefile.am  test-skeleton.c
tests/resources/: depth-data-1028894671  depth-data-1038901490  depth-data-1045879925  depth-data-1051883281  depth-data-1058893191  depth-data-1064898470  depth-data-1070905432  depth-data-1078881076  depth-data-1166565565  depth-data-1234568668  depth-data-1399145206  depth-data-82823944
